---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: ????
  Features:
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2022-12-20
  Bugfixes:
    - Fixed a crash when a player is invalidated during on_init
    - Fixed a crash when a technology is removed from the game
    - Fixed that technologies with `visible_when_disabled` set would not be shown correctly
    - Fixed that the techs list would include hidden technologies
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-12-20
  Compatibility:
    - Added incompatibility with Improved Research Queue - the two mods break one another
  Bugfixes:
    - Fixed that the active research would not be added to the queue when adding to an existing game
    - Removed technology slot clicked debug logging
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2022-12-20
  Features:
    - Initial release