@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: ????
-  Features:
+  Bugfixes:
+    - Fixed a crash when queueing to front a technology with no prerequisites
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 2022-12-20
